Se agrego el header para los usuarios

--- a/material-kit-pro-html-v2.1.0/index.html
+++ b/material-kit-pro-html-v2.1.0/index.html
@@ -1071,7 +1071,7 @@
           </nav>
           <!--        end primary navbar -->
           <!--         inverse navbar with notifications     -->
-          <nav class="navbar navbar-inverse navbar-expand-lg bg-dark" role="navigation-demo">
+          <nav class="navbar navbar-inverse navbar-expand-lg bg-dark">
             <div class="container">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-translate">
